--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>WORKING-SPHERE</h1>
     </header>
+         <div class="modal-overlay" id="modalOverlay"></div>
 
     <div class="bigcontain">
         <div class="side" id="side">
@@ -77,7 +78,7 @@
                 <img src="" alt="Profile" class="profileimg" id="profileimg">
                 <div style="flex: 1;">
                     <label for="workerName">Nom et Prénom</label>
-                    <input type="text" id="workerName" placeholder="AMINE LEBRINI" required>
+                    <input type="text" id="workerName" placeholder="OUMAIMA EDDAHANI" required>
                 </div>
             </div>
 
@@ -101,10 +102,10 @@
             </div>
 
             <label for="workerEmail">Email</label>
-            <input type="email" id="workerEmail" placeholder="aminelebrini4@gmail.com" required>
+            <input type="email" id="workerEmail" placeholder="oumaimaeddahani@gmail.com" required>
 
             <label for="workerPhone">Téléphone</label>
-            <input type="tel" id="workerPhone" placeholder="648498464599" required>
+            <input type="tel" id="workerPhone" placeholder="+22698464599" required>
 
             <div class="experiences-section">
                 <div class="experiences-header">
