modifier les classes de ajouter entreprise

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                         <h4 class="font-bold">Expérience 1</h4>
                         <button class="remove-exp-btn text-lg cursor-pointer text-red-500 hover:text-red-700 hidden" type="button">&times;</button>
                     </div>
-                    <input type="text" placeholder="Poste" class="exp-title w-full p-2 bg-white rounded border border-gray-300" required>
-                    <input type="text" placeholder="Entreprise" class="exp-company w-full p-2 bg-white rounded border border-gray-300" required>
+                    <input type="text" placeholder="Poste" class="exp-poste w-full p-2 bg-white rounded border border-gray-300" required>
+                    <input type="text" placeholder="Entreprise" class="exp-entreprise w-full p-2 bg-white rounded border border-gray-300" required>
                     <div class="flex gap-2">
                         <input type="date" class="exp-start p-2 bg-white rounded border border-gray-300 flex-1" required>
                         <input type="date" class="exp-end p-2 bg-white rounded border border-gray-300 flex-1" required>
